syntax = "proto3";

package monad_proto.basic;

message ProtoPubkey {
  bytes pubkey = 1;
}

message ProtoNodeId {
  ProtoPubkey pubkey = 1;
}

message ProtoRound {
  uint64 round = 1;
}

message ProtoHash {
  bytes hash = 1;
}

